fix(style): make log text overflow auto

--- a/src/components/Logs.module.scss
+++ b/src/components/Logs.module.scss
@@ -35,7 +35,7 @@ $heightHeader: 76px;
   // force wrap
   width: 100%;
   white-space: pre;
-  overflow: scroll;
+  overflow: auto;
 }
 
 //////////
